@@ -49,7 +49,7 @@
 
 -- For 0.4 --------------------------------------------------------------------
 
-- document list-commands. document switch-client
+- document list-commands. document switch-client. document move-window
 - document buffer stuff
 - document next/prev word
 - commands:
