@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.56 2008-06-23 22:24:16 nicm Exp $ */
+/* $Id: cmd.c,v 1.57 2008-06-25 20:33:20 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -45,6 +45,7 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_list_keys_entry,
 	&cmd_list_sessions_entry,
 	&cmd_list_windows_entry,
+	&cmd_move_window_entry,
 	&cmd_new_session_entry,
 	&cmd_new_window_entry,
 	&cmd_next_window_entry,
